Fixing GavCoin dApp overflow issues (#2953) (#3030)

--- a/js/src/dapps/gavcoin/Events/events.css
+++ b/js/src/dapps/gavcoin/Events/events.css
@@ -17,6 +17,11 @@
 .events {
   padding: 4em 2em;
   text-align: center;
+  display: flex;
+}
+
+.container {
+  overflow: auto;
 }
 
 .list {
@@ -30,6 +35,7 @@
   vertical-align: top;
   padding: 0.25em 1em;
   max-height: 1.5em;
+  white-space: nowrap;
 }
 
 .event {
